# htp-ops-lib

./: .clang-format  CMakeLists.txt  LICENSE  README copy.md  README.md
include/: htp_ops.idl  message.h  op_reg.h
include/dsp/: dma_utils.h  hmx_mgr.h  hmx_utils.h  hvx_convert.h  hvx_internal.h  hvx_math.h  mmap_mgr.h  op_executor.h  ops.h  power.h  quants.h  utils.h  vtcm_mgr.h  worker_pool.h
include/host/: op_export.h  session.h
src/dsp/: commu.c  hmx_mgr.c  mmap_mgr.cc  op_executor.cc  op_tests.cc  power.c  vtcm_mgr.cc  worker_pool.c
src/dsp/ops/: flash_attn.c  flash_attn_sp_hdim.c  hvx_silu.c  mat_mul.c  mm_benchmark.c  precompute_table.c  rms_norm.c  swiglu_gate_up_fused.c
src/host/: op_export.c  session.c  test.c
